--- a/views/workPage.ejs
+++ b/views/workPage.ejs
@@ -7,11 +7,11 @@
 <body>
 		
 	
-		<div> <%= data[0].name %></div>
-		<div> <%= data[0].title %></div>
-		<div> <%= data[0].description %></div>
-		<a href="/works">back</a>
-
+		<div> name:  <%= data[0].name %></div>
+	 	<div> title: <%= data[0].title %></div>
+	    <div> description: <%= data[0].description %></div>
+						<a href="/works">back</a>
+		
 
 </body>
 </html>
